--- a/pdf2jpg/package.json
+++ b/pdf2jpg/package.json
@@ -3,23 +3,16 @@
   "version": "1.0.0",
   "description": "PDF to JPG online",
   "author": "Stepan Vavra <vavra.stepan@gmail.com>",
-  "main": "pdfsplit.js",
+  "main": "pdf2jpg.js",
   "scripts": {
-    "start": "node pdfsplit.js"
+    "start": "node pdf2jpg.js"
   },
   "dependencies": {
-    "formidable": "latest",
 
     "fs": "latest",
     "tmp": "latest",
-    "zip-folder": "latest",
 
-    "@google-cloud/storage": "0.3.0",
     "body-parser": "1.15.2",
-    "express": "4.14.0",
-    "multer": "1.2.0",
-    "pug": "2.0.0-beta6",
-
-    "request": "latest"
+    "express": "4.14.0"
   }
 }
