--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,10 @@
     "body-parser": "1.15.2",
     "express": "4.14.0",
     "multer": "1.2.0",
-    "pug": "2.0.0-beta6"
+    "pug": "2.0.0-beta6",
+
+    "tmp": "latest",
+    "fs": "latest",
+    "request": "latest"
   }
 }
